--- a/www/add-new-ad.html
+++ b/www/add-new-ad.html
@@ -171,7 +171,7 @@
                   <button type="button" id="addPostPhoto" class="button middle">Добавить фото</button>
                 </div>
 
-                <input type="submit" value="Опубликовать" class="button middle tab-input"></input>
+                <input type="submit" value="Опубликовать" class="button middle submit-button tab-input"></input>
               </form>
 
             </div>
