--- a/www/community.html
+++ b/www/community.html
@@ -23,8 +23,9 @@
     <link rel="stylesheet" type="text/css" href="css/gird-column.css">
     <link rel="stylesheet" type="text/css" href="css/reset-min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-aside-filter.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/styles-community.css">
     <link rel="stylesheet" type="text/css" href="css/paginator.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -102,7 +103,7 @@
           <section class="l-community col xs-9">
             <div class="block b-community">
               <div class="b-main-title">
-                <h3>Сообщества</h3>
+                <h1>Сообщества</h1>
               </div>
               <div class="paginator">
                 <div class="b-community__container container">
@@ -241,8 +242,8 @@
           <section class="l-filter col xs-3">
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <p class="text bold"><span class="all-community">256</span> сообществ</p>
-                <p><a href="#" class="text bold"><span class="new-company">12</span> новых</a></p>
+                <h3><span class="all-community">256</span> сообществ</h3>
+                <h4><a href="#"><span class="new-company">12</span> новых</a></h4>
                 <div class="b-filter__switch">
                   <a href="#" class="b-filter__switch-item text bold">Авто</a>
                   <a href="#" class="b-filter__switch-item text bold">Мото</a>
