--- a/www/company.html
+++ b/www/company.html
@@ -104,7 +104,7 @@
           <section class="l-company col xs-9">
             <div class="block b-company">
               <div class="b-main-title">
-                <h3>Компании</h3>
+                <h1>Компании</h1>
               </div>
               <div class="paginator">
                 <div class="b-company__container container">
@@ -200,8 +200,8 @@
           <section class="l-filter col xs-3">
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <p class="text bold"><span class="all-company">256</span> компаний</p>
-                <p class="text bold"><a href="#">12</span> новых</a>
+                <h3><span class="all-company">256</span> компаний</h3>
+                <h4><a href="#"><span>12</span> новых</a></h4>
                 <form class="b-filter__form" name="filter">
                   <div class="b-filter__form-item droplist">
                     <input type="text" id="sector" value="all" hidden>
