--- a/www/main.html
+++ b/www/main.html
@@ -119,11 +119,11 @@
                 </div>
 
               <div class="b-content__lider">
-                <h3>Лидер голосования</h3>
-                
+
                 <article class="b-content__lider-article">
                   <img src="img/temp/c1c36aes-960.jpg" alt="" class="b-content__lider-article-img">
                   <div class="b-content__lider-article-vote"><span>225 голосов</span></div>
+                  <h4 class="b-content__lider-article-title">Лидер голосования<h4>
                   <h4>My old-school bulltet proof E-Klasse </h4>
                   <div class="b-content__lider-article-author">
                     <img src="img/temp/author/author-1.jpg" alt="" class="b-content__lider-article-author-photo">
@@ -135,7 +135,7 @@
                 </article>
 
                 <div class="b-content__lider-previous">
-                  <p><a href="#" class="text bold">Предидущие победители</a></p>
+                  <h4><a href="#">Предидущие победители</a></h4>
                   <div class="b-content__container">
                     <a href="#" title="" class="b-content__lider-previous-item">
                       <img src="img/temp/img-previous-1.jpg" alt="">
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="b-content__lider-gaining">
-                  <p><a href="#" class="text bold">Набирают популярность</a></p>
+                  <h4><a href="#">Набирают популярность</a></h4>
                    <div class="b-content__container">
                     <a href="#" title="" class="b-content__lider-gaining-item">
                       <img src="img/temp/img-previous-1.jpg" alt="">
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="b-content__lider-promote">
-                  <p><a href="#" class="text bold">Продвигаемые проекты</a></p>
+                  <h4><a href="#">Продвигаемые проекты</a></h4>
                   <div class="b-content__container">
                     <a href="#" title="" class="b-content__lider-promote-item">
                       <img src="img/temp/img-previous-1.jpg" alt="">
@@ -301,7 +301,7 @@
               </div>
 
               <div class="b-new-auto__inner">
-                <h3>Новые машины</h3>
+                <h4>Новые машины</h4>
                 <div class="paginator">
                   <div class="b-new-auto__container container">
 
