--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -271,8 +271,8 @@
             </div>
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <p class="text bold"><span class="all-ad">256</span> обьявлений</p>
-                <p class="text bold"><a href="#">12</span> новых</a>
+                <h3><span class="all-ad">256</span> обьявлений</h3>
+                <h4><a href="#">12</span> новых</a></h4>
                 <form class="b-filter__form" name="filter">
                   <div class="b-filter__form-item droplist">
                     <input type="text" id="sector" value="all" hidden>
