Вторая итерация - Первая страница

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,9 @@
       <a href="one-ad-page.html" title="">One ad page HTML</a><br />
       <a href="add-new-ad.html" title="">Add new ad HTML</a><br />
       <a href="news.html" title="">News HTML</a><br />
+      <a href="one-item-news.html" title="">One News HTML</a><br />
+      <a href="about.html" title="">About HTML</a><br />
+      <!-- <a href="rules.html" title="">Rules HTML</a><br /> -->
       <!-- <a href="testdrive.html" title="">Testdrive page HTML</a><br /> -->
 
   </body>
