--- a/www/news.html
+++ b/www/news.html
@@ -102,14 +102,16 @@
         <div class="row">
           <section class="l-news col xs-9">
             <div class="block b-news">
-              <h1>Новости</h1>
+              <div class="b-main-title">
+                <h1>Новости</h1>
+              </div>
               <div class="b-news__wrap container">
                 <div class="b-news__wrap-item item">
                   <img src="img/temp/auto/2.png" alt="">
                   <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="one-item-news.html">
                     <h5>Как научить Рено Дастер плавать или не повторяйте моих ошибок</h5>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!</p>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam </p>
                   </a>
                   <a href="#" class="text subtext b-new__item-bottom">
                     <span class="comments" data-name="комментариев">40</span>
@@ -119,7 +121,7 @@
                   <img src="img/temp/img-previous-1.jpg" alt="">
                   <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="one-item-news.html">
-                    <h5><a href="one-item-news.html">Как научить Рено Дастер плавать или не повторяйте моих ошибок</h5>
+                    <h5>Как научить Рено Дастер плавать или не повторяйте моих ошибок</h5>
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!</p>
                   </a>
                   <a href="#" class="text subtext b-new__item-bottom">
@@ -172,6 +174,17 @@
                   </a>
                 </div>
                 <div class="b-news__wrap-item item">
+                  <img src="img/temp/auto/2.png" alt="">
+                  <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
+                  <a href="one-item-news.html">
+                    <h5>Как научить Рено Дастер плавать или не повторяйте моих ошибок</h5>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam </p>
+                  </a>
+                  <a href="#" class="text subtext b-new__item-bottom">
+                    <span class="comments" data-name="комментариев">40</span>
+                  </a>
+                </div>
+                <div class="b-news__wrap-item item">
                   <img src="img/temp/auto/5.png" alt="">
                   <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="one-item-news.html">
@@ -194,12 +207,44 @@
                     <span class="comments" data-name="комментариев">40</span>
                   </a>
                 </div>
+                <div class="b-news__wrap-item item">
+                  <img src="img/temp/auto/5.png" alt="">
+                  <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
+                  <a href="one-item-news.html">
+                    <h5>Как научить Рено Дастер плавать или не повторяйте моих ошибок</h5>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!</p>
+                  </a>
+                  <a href="#" class="text subtext b-new__item-bottom">
+                    <span class="comments" data-name="комментариев">40</span>
+                  </a>
+                </div>
+                <div class="b-news__wrap-item item">
+                  <img src="img/temp/auto/2.png" alt="">
+                  <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
+                  <a href="one-item-news.html">
+                    <h5>Как научить Рено Дастер плавать или не повторяйте моих ошибок</h5>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam </p>
+                  </a>
+                  <a href="#" class="text subtext b-new__item-bottom">
+                    <span class="comments" data-name="комментариев">40</span>
+                  </a>
+                </div>
+                <div class="b-news__wrap-item item">
+                  <img src="img/temp/auto/6.png" alt="">
+                  <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
+                  <a href="one-item-news.html">
+                    <h5>Как научить Рено Дастер плавать</h5>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa minima id alias ad, eveniet rem? Hic natus similique voluptatem id nam corrupti expedita repellendus. Alias voluptatem tempora, explicabo debitis sapiente!</p>
+                  </a>
+                  <a href="#" class="text subtext b-new__item-bottom">
+                    <span class="comments" data-name="комментариев">40</span>
+                  </a>
+                </div>
             </div>
             <!-- 
                   Скрыть кнопку переключения класс .m-pagination_hide;
                   Текущая страница пагинации класс .m-pagination-item_current;
                 -->
-<!--                 
             <div class="b-new-auto__pagination controll">
               <span class="b-new-auto__pagination-item item text m-pagination_prev m-pagination_hide"><<</span>
               <span class="b-new-auto__pagination-item item text m-new-auto__pagination-item_current">1</span>
@@ -207,7 +252,6 @@
               <span class="b-new-auto__pagination-item item text">3</span>
               <span class="b-new-auto__pagination-item item text">4</span>
               <span class="b-new-auto__pagination-item item text m-pagination-item_next">>></span>
-            </div> -->
             </div>
           </section>
 
@@ -243,8 +287,8 @@
                 <h4>Популярные посты</h4>
               
                 <div class="b-popular__item item">
-                  <p class="text subtext b-new__item-top"><span class="date">19.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                  <p class="text subtext b-new__item-top"><span class="date">19.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   <a href="#" class="text subtext b-new__item-bottom">
                     <span class="comments" data-name="комментариев">40</span>
@@ -252,8 +296,8 @@
                 </div>
 
                 <div class="b-popular__item item">
-                  <p class="text subtext b-new__item-top"><span class="date">16.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                  <p class="text subtext b-new__item-top"><span class="date">19.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="#" class="text">В париже представлен новый Mitsubishi L200</a>
                   <a href="#" class="text subtext b-new__item-bottom">
                     <span class="comments" data-name="комментариев">40</span>
@@ -261,8 +305,8 @@
                 </div>
 
                 <div class="b-popular__item item">
-                  <p class="text subtext b-new__item-top"><span class="date">27.09.2016</span><a href="#" class="tag">Категория</a></p>
                   <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-news__inner-item-img">
+                  <p class="text subtext b-new__item-top"><span class="date">19.10.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="#" class="text"><span>XASTOMTUNING:</span> Наш опыт восстановления  по оригинальным чертежам</a>
                   <a href="#" class="text subtext b-new__item-bottom">
                     <span class="comments" data-name="комментариев">40</span>
@@ -270,8 +314,8 @@
                 </div>
 
                 <div class="b-popular__item item">
-                  <p class="text subtext b-new__item-top"><span class="date">12.09.2016</span><a href="#" class="tag">Категория</a></p>
                   <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                  <p class="text subtext b-new__item-top"><span class="date">12.09.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="#" class="text">В париже представлен новый Mitsubishi L200</a>
                   <a href="#" class="text subtext b-new__item-bottom">
                     <span class="comments" data-name="комментариев">40</span>
@@ -279,8 +323,8 @@
                 </div>
 
                 <div class="b-popular__item item">
-                  <p class="text subtext b-new__item-top"><span class="date">12.08.2016</span><a href="#" class="tag">Категория</a></p>
                   <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                  <p class="text subtext b-new__item-top"><span class="date">12.08.2016</span><a href="#" class="tag">Категория</a></p>
                   <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   <a href="#" class="text subtext b-new__item-bottom">
                     <span class="comments" data-name="комментариев">40</span>
@@ -288,13 +332,14 @@
                 </div>
 
                 <div class="b-popular__item item">
-                  <p class="text subtext b-new__item-top"><span class="date">25.07.2016</span><a href="#" class="tag">Категория</a></p>
                   <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
-                  <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
+                  <p class="text subtext b-new__item-top"><span class="date">12.08.2016</span><a href="#" class="tag">Категория</a></p>
+                  <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибокКак научить Рено Дастер плавать или не повторяйте моих ошибокКак научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   <a href="#" class="text subtext b-new__item-bottom">
                     <span class="comments" data-name="комментариев">40</span>
                   </a>
                 </div>
+
                 <p class="show-yet"><a href="#" title="" class="text subtext">Показать еще</a></p>
               </div>
             </div>
