--- a/www/main.html
+++ b/www/main.html
@@ -44,8 +44,10 @@
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-8">
-          <li><a href="main.html" title="" class="text bold">Новости</a></li>
+          <li><a href="main.html" title="" class="text bold">Главная</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
+          <li><a href="test-drives.html" title="" class="text bold">Тест драйвы</a></li>
+          <li><a href="interesting.html" title="" class="text bold">Интересное</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
           <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
         </ul>
@@ -122,74 +124,41 @@
 
                 <article class="b-content__lider-article">
                   <img src="img/temp/c1c36aes-960.jpg" alt="" class="b-content__lider-article-img">
-                  <div class="b-content__lider-article-vote"><span>225 голосов</span></div>
-                  <h4 class="b-content__lider-article-title">Лидер голосования<h4>
-                  <h4>My old-school bulltet proof E-Klasse </h4>
+                  <div class="b-content__lider-article-vote">Лидер голосования <span>225</span> голосов</div>
+                  <h4>Заголовок</h4>
                   <div class="b-content__lider-article-author">
-                    <img src="img/temp/author/author-1.jpg" alt="" class="b-content__lider-article-author-photo">
-                    <span class="b-content__lider-article-author-name text">Leonidis Castonedis</span><span class="b-content__lider-article-author-city text">Athens</span>
+                    <img src="#" alt="" class="b-content__lider-article-author-photo">
+                    <span class="b-content__lider-article-author-name text">Name</span><span class="b-content__lider-article-author-city text">City</span>
                   </div>
-                  <p class="b-content__lider-article-text text">Реальность всё расставляет на свои места. Машины, которые в статьях и обзорах ругали — сплошь и рядом встречаются на дорогах. А те, которые хвалили — редкость. Просто любой автомобиль может стать очень хорошим. Потому что он стал вашим. Ведь как бывает, придёшь в магазин, а там в линию выстроились штук пятнадцать телевизоров.</p>
-                  <button type="button" class="b-content__lider-article-read button small">Читать дальше</button>
-                  <button type="button" class="b-content__lider-article-discuss">Обсудить <span class="b-content__lider-article-discuss-sum">23</span></button>
+                  <p class="b-content__lider-article-text text">Note text</p>
+                  <a href="" class="b-content__lider-article-read button small">Читать далее</a>
                 </article>
 
-                <div class="b-content__lider-previous">
-                  <h4><a href="#">Предидущие победители</a></h4>
-                  <div class="b-content__container">
-                    <a href="#" title="" class="b-content__lider-previous-item">
+                <div class="b-content__lider-previous paginator">
+                  <h4>Предидущие победители</h4>
+                  <div class="b-content__container pagin-container">
+<!--                     <a href="#" title="" class="b-content__lider-previous-item item">
                       <img src="img/temp/img-previous-1.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-previous-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a>
+                    </a>-->
                   </div>
                 </div>
 
-                <div class="b-content__lider-gaining">
-                  <h4><a href="#">Набирают популярность</a></h4>
-                   <div class="b-content__container">
-                    <a href="#" title="" class="b-content__lider-gaining-item">
+                <div class="b-content__lider-gaining paginator">
+                  <h4>Набирают популярность</h4>
+                   <div class="b-content__container pagin-container">
+<!--                 <a href="#" title="" class="b-content__lider-gaining-item item">
                       <img src="img/temp/img-previous-1.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-gaining-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a><a href="#" title="" class="b-content__lider-gaining-item">
-                      <img src="img/temp/e5ac4aes-480.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-gaining-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a>
+                    </a> -->
                   </div>
                 </div>
 
-                <div class="b-content__lider-promote">
-                  <h4><a href="#">Продвигаемые проекты</a></h4>
-                  <div class="b-content__container">
-                    <a href="#" title="" class="b-content__lider-promote-item">
+                <div class="b-content__popular paginator">
+                  <h4>Популярные авто</h4>
+                  <a href="#" title="" class="b-link-show-all text">Показать все</a>
+                  <div class="b-content__popular-container pagin-container pagin-wrap">
+                    <!-- <a href="#" title="" class="b-content__popular-item item">
                       <img src="img/temp/img-previous-1.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="img/temp/img-previous-1.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="img/temp/img-previous-1.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a>
-                    <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="img/temp/img-previous-2.jpg" alt="">
-                    </a>
+                    </a> -->
                   </div>
                 </div>
               </div>
@@ -199,17 +168,9 @@
 
           <section class="l-news col sm-3 order-xs-2 xs-12">
             <div class="block b-news">
-              <div class="b-news__date dropdown-block">
-                <p class="b-news__date-currnet text dropdown-block-current">Сегодня</p>
-                <ul class="b-news__date-list dropdown-block-list">
-                  <li><a href="#">Сегодня</a></li>
-                  <li><a href="#">Вчера</a></li>
-                  <li><a href="#">На прошлой недели</a></li>
-                  <li><a href="#">В прошлом году</a></li>
-                </ul>
-              </div>
               <div class="b-news__inner">
                 <h3>Новое</h3>
+                <a href="news.html" title="" class="b-link-show-all text">Все новое</a>
                 <div class="b-news__container">
 
                   <div class="b-news__inner-item m-news__inner-item_blog" data-name="Блоги">
@@ -244,15 +205,13 @@
 
                 </div>
 
-                <p class="b-news__inner-show"><a href="#" title="" class="text subtext">Показать еще</a></p>
-
               </div>
           </section>
 
           <section class="l-mark col sm-1 order-xs-3 xs-12">
             <div class="block b-mark">
               <ul class="b-mark__list">
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>
+                <!-- <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>
                 <li><a href="#" class="b-mark__list-item m-mark__list-item_toyota"></a></li>
                 <li><a href="#" class="b-mark__list-item m-mark__list-item_shkoda"></a></li>
                 <li><a href="#" class="b-mark__list-item m-mark__list-item_honda"></a></li>
@@ -279,7 +238,7 @@
                 <li><a href="#" class="b-mark__list-item m-mark__list-item_chevrolet"></a></li>
                 <li><a href="#" class="b-mark__list-item m-mark__list-item_vw"></a></li>
                 <li><a href="#" class="b-mark__list-item m-mark__list-item_nissan"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_ford"></a></li>
+                <li><a href="#" class="b-mark__list-item m-mark__list-item_ford"></a></li> -->
               </ul>
             </div>
           </section>
@@ -287,151 +246,23 @@
 
         <div class="row">
 
-          <section class="l-new-auto col xs-12">
+          <section class="l-new-auto col sm-8 order-xs-1 xs-12">
             <div class="block b-new-auto">
-
-              <div class="b-new-auto__date dropdown-block">
-                <p class="b-new-auto__date-currnet text dropdown-block-current">Сегодня</p>
-                <ul class="b-new-auto__date-list dropdown-block-list">
-                  <li><a href="#">Сегодня</a></li>
-                  <li><a href="#">Вчера</a></li>
-                  <li><a href="#">На прошлой недели</a></li>
-                  <li><a href="#">В прошлом году</a></li>
-                </ul>
-              </div>
 
               <div class="b-new-auto__inner">
                 <h4>Новые машины</h4>
+                <a href="#" title="" class="b-link-show-all text">Показать все</a>
                 <div class="paginator">
-                  <div class="b-new-auto__container container">
+                  <div class="b-new-auto__container pagin-container pagin-wrap">
 
-                    <a href="#" title="" class="b-new-auto__item item">
+                    <!-- <a href="#" title="" class="b-new-auto__item item">
                       <img src="img/temp/auto/1.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/2.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/3.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/4.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/5.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/6.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/7.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/8.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/9.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/1.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/2.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/3.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/4.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/5.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/6.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/7.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/8.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/9.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/1.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/2.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/3.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
-                    <a href="#" title="" class="b-new-auto__item item">
-                      <img src="img/temp/auto/4.png" alt="">
-                      <p class="b-new-auto__item-name">Alexis.Sanches</p>
-                      <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
-                    </a>
+                    </a> -->
 
-                  </div>
-
-                <!-- 
-                  Скрыть кнопку переключения класс .m-pagination_hide;
-                  Текущая страница пагинации класс .m-pagination-item_current;
-                -->
-                  <div class="b-new-auto__pagination controll">
-                   <span class="b-new-auto__pagination-item item text m-pagination_prev m-pagination_hide"><<</span>
-                    <span class="b-new-auto__pagination-item item text m-new-auto__pagination-item_current">1</span>
-                    <span class="b-new-auto__pagination-item item text">2</span>
-                    <span class="b-new-auto__pagination-item item text">3</span>
-                    <span class="b-new-auto__pagination-item item text">4</span>
-                    <span class="b-new-auto__pagination-item item text m-pagination-item_next">>></span>
                   </div>
                 </div>
-
               </div>
             </div>
           </section>
