--- a/www/style-page.html
+++ b/www/style-page.html
@@ -132,14 +132,16 @@
     
       <p style="background: #0038A8; color: #FFFFFF">Основной цвет фона #0038A8</p>
       <p style="background: #333333; color: #FFFFFF">Основной цвет текста #333333</p>
-      <h1>Заголовок h1</h1>
-      <h2>Заголовок h2</h2>
-      <h3>Заголовок h3</h3>
-      <h4>Заголовок h4</h4>
-      <h5>Заголовок h5</h5>
-      <h6>Заголовок h6</h6>
-      <p class="text">Обычный текст text</p>
-      <p class="text bold">Обычный жирный текст text bold</p>
+      <h1>Заголовок h1 font-size : 48px; line-height : 52px; - Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
+      <h2>Заголовок h2 font-size : 36px; line-height : 45px;  - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </h2>
+      <h3>Заголовок h3 font-size : 28px; line-height : 42px;  - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </h3>
+      <h4>Заголовок h4 font-size : 24px; line-height : 30px;  - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </h4>
+      <h5>Заголовок h5 font-size : 18px; line-height : 22px;  - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsumLorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </h5>
+      <h6>Заголовок h6 font-size : 14px; line-height : 16px;  - Lorem ipsum dolor sit amet, consectetur adipisipsum dolor sit amet, consectetur adipisipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </h6>
+      <p class="text">Обычный текст text font-size : 14px; line-height : 20px;  -  - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </p>
+      <p class="text subtext">Subtext font-size : 12px; line-height : 16px; -  - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet,rem Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet,rem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </p>
+      <p class="text bold">Обычный жирный текст text bold - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolororem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </p>
+      <p class="lead">Lead  font-size : 16px; line-height : 22px; - Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsumLorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, </p>
 
     <form name="styles">
       <div class="b-form-item m-form-item-inline">
