--- a/www/index.html
+++ b/www/index.html
@@ -37,21 +37,33 @@
 
       <a href="style-page.html" title="">Style HTML</a><br />
       <a href="main.html" title="">Main HTML</a><br />
-      <a href="my-page.html" title="">My auto page HTML</a><br />
-      <a href="add-my-car.html" title="">Add my car HTML</a><br />
-      <a href="edit-my-profile.html" title="">Edit my page HTML</a><br />
-      <a href="community.html" title="">Community page HTML</a><br />
-      <a href="my-blog.html" title="">My blog page HTML</a><br />
-      <a href="add-blog.html" title="">ADD blog page HTML</a><br />
-      <a href="company.html" title="">Companys page HTML</a><br />
-      <a href="add-company.html" title="">Add company page HTML</a><br />
-      <a href="one-company-page.html" title="">One company page HTML</a><br />
-      <a href="flea-market.html" title="">Flea market page HTML</a><br />
-      <a href="one-ad-page.html" title="">One ad page HTML</a><br />
-      <a href="add-new-ad.html" title="">Add new ad HTML</a><br />
-      <a href="news.html" title="">News HTML</a><br />
-      <a href="one-item-news.html" title="">One News HTML</a><br />
-      <a href="about.html" title="">About HTML</a><br />
+      <div style="margin-left: 30px;">
+        <a href="news.html" title="">News HTML</a><br />
+        <div style="margin-left: 30px;">
+          <a href="add-new-ad.html" title="">Add new ad HTML</a><br />
+          <a href="one-item-news.html" title="">One News HTML</a><br />
+          <a href="add-blog.html" title="">ADD blog page HTML</a><br />
+        </div>
+        <a href="flea-market.html" title="">Барахолка page HTML</a><br />
+        <div style="margin-left: 30px;">
+          <a href="one-ad-page.html" title="">One advertisement page HTML</a><br />
+          <a href="add-new-ad.html" title="">Add new advertisement page HTML</a><br />
+        </div>
+        <a href="community.html" title="">Community page HTML</a><br />
+        <a href="company.html" title="">Companys page HTML</a><br />
+        <div style="margin-left: 30px;">
+          <a href="add-company.html" title="">Add company page HTML</a><br />
+          <a href="one-company-page.html" title="">One company page HTML</a><br />
+        </div>
+        <a href="my-page.html" title="">My auto page HTML</a><br />
+        <div style="margin-left: 30px;">
+          <a href="add-my-car.html" title="">Add my car HTML</a><br />
+          <a href="edit-my-profile.html" title="">Edit my page HTML</a><br />
+          <a href="my-blog.html" title="">My blog page HTML</a><br />
+        </div>
+        <a href="about.html" title="">About HTML</a><br />
+      </div>
+      
       <!-- <a href="rules.html" title="">Rules HTML</a><br /> -->
       <!-- <a href="testdrive.html" title="">Testdrive page HTML</a><br /> -->
 
