--- a/www/main.html
+++ b/www/main.html
@@ -43,17 +43,12 @@
     <header class="l-menu">
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
-        <ul class="b-menu__wrapp-list col xs-8">
-          <li><a href="main.html" title="" class="text bold">Главная</a></li>
-          <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
-          <li><a href="test-drives.html" title="" class="text bold">Тест драйвы</a></li>
-          <li><a href="interesting.html" title="" class="text bold">Интересное</a></li>
-          <li><a href="company.html" title="" class="text bold">Компании</a></li>
-          <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
+        <ul class="b-menu__wrapp-list col xs-7">
+        <!--           <li><a href="main.html" title="" class="text bold">Главная</a></li> -->
         </ul>
 
         <!-- Попап входа -->
-        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1">Войти</button>
+        <button class="b-menu__wrapp-login button small text bold col xs-offset-2 xs-1">Войти</button>
         <div class="b-menu__wrapp-login-popup">
           <div class="b-menu__wrapp-login-popup-close"></div>
           <form action="/" method="POST" class="b-menu__wrapp-login-popup-enter">
@@ -67,15 +62,18 @@
         </div>
 
       <!-- Меню пользователя -->
-        <div class="b-menu__wrapp-login-nav" style="display: none;">
-          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
-          <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
-          <ul class="b-menu__wrapp-login-nav-list text">
-            <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
-            <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
-            <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
-            <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
-          </ul>
+        <div class="b-menu__wrapp-login-nav col xs-3" style="display: none;">
+          <a href="#" class="text b-menu__user-notification-messages"></a>
+          <div class="b-menu__wrapp-login-wrapp">
+            <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+            <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
+            <ul class="b-menu__wrapp-login-nav-list text">
+              <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
+              <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
+              <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
+              <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
+            </ul>
+          </div>
         </div>
 
       </nav>
@@ -103,7 +101,7 @@
         <div class="l-appeal">
           <h3>DRIVELAND.gr — это крупнейшее сообщество автовладельцев! Реальные отзывы, опыт эксплуатации, решение проблем.</h3>
           <p class="text">Голосуйте за интересные машины. Добавьте свое авто и участвуйте в рейтинге лучших!</p>
-          <button class="button big button-registration">Присоединяйтесь!</button>
+          <button class="button big button-registration">Присоединяйтесь !</button>
         </div>
 
         <div class="row row-wrap">
@@ -154,7 +152,7 @@
 
                 <div class="b-content__popular paginator">
                   <h4>Популярные авто</h4>
-                  <a href="#" title="" class="b-link-show-all text">Показать все</a>
+                  <a href="community.html" title="" class="b-link-show-all text">Показать все</a>
                   <div class="b-content__popular-container pagin-container pagin-wrap">
                     <!-- <a href="#" title="" class="b-content__popular-item item">
                       <img src="img/temp/img-previous-1.jpg" alt="">
@@ -173,33 +171,45 @@
                 <a href="news.html" title="" class="b-link-show-all text">Все новое</a>
                 <div class="b-news__container">
 
-                  <div class="b-news__inner-item m-news__inner-item_blog" data-name="Блоги">
-                    <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                  <div class="b-news__inner-item m-news__inner-item_blog">
+                    <div data-name="Блоги">
+                      <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                    </div>
                     <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
 
-                  <div class="b-news__inner-item m-news__inner-item_news-market" data-name="Новости рынка">
-                    <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                  <div class="b-news__inner-item m-news__inner-item_news-market">
+                    <div data-name="Новости рынка">
+                      <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                    </div>
                     <a href="#" class="text">В париже представлен новый Mitsubishi L200</a>
                   </div>
 
-                  <div class="b-news__inner-item m-news__inner-item_company" data-name="Новости рынка">
-                    <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-news__inner-item-img">
+                  <div class="b-news__inner-item m-news__inner-item_company">
+                    <div data-name="Новости рынка">
+                      <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-news__inner-item-img">
+                    </div>
                     <a href="#" class="text"><span>XASTOMTUNING:</span> Наш опыт восстановления  по оригинальным чертежам</a>
                   </div>
 
-                  <div class="b-news__inner-item m-news__inner-item_news-market" data-name="Новости рынка">
-                    <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                  <div class="b-news__inner-item m-news__inner-item_news-market">
+                    <div data-name="Новости рынка">
+                      <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                    </div>
                     <a href="#" class="text">В париже представлен новый Mitsubishi L200</a>
                   </div>
 
-                  <div class="b-news__inner-item m-news__inner-item_blog" data-name="Блоги">
-                    <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                  <div class="b-news__inner-item m-news__inner-item_blog">
+                    <div data-name="Блоги">
+                      <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                    </div>
                     <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
 
-                  <div class="b-news__inner-item m-news__inner-item_blog" data-name="Блоги">
-                    <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                  <div class="b-news__inner-item m-news__inner-item_blog">
+                    <div data-name="Блоги">
+                      <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                    </div>
                     <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
 
@@ -251,7 +261,7 @@
 
               <div class="b-new-auto__inner">
                 <h4>Новые машины</h4>
-                <a href="#" title="" class="b-link-show-all text">Показать все</a>
+                <a href="community.html" title="" class="b-link-show-all text">Показать все</a>
                 <div class="paginator">
                   <div class="b-new-auto__container pagin-container pagin-wrap">
 
