--- a/www/one-ad-page.html
+++ b/www/one-ad-page.html
@@ -38,19 +38,14 @@
   </head>
   <body>
 
-
     <header class="l-menu">
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
-        <ul class="b-menu__wrapp-list col xs-8">
-          <li><a href="main.html" title="" class="text bold">Новости</a></li>
-          <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
-          <li><a href="company.html" title="" class="text bold">Компании</a></li>
-          <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
+        <ul class="b-menu__wrapp-list col xs-7">
         </ul>
 
         <!-- Попап входа -->
-        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1" style="display: none;">Войти</button>
+        <button class="b-menu__wrapp-login button small text bold col xs-offset-2 xs-1" style="display: none;">Войти</button>
         <div class="b-menu__wrapp-login-popup">
           <div class="b-menu__wrapp-login-popup-close"></div>
           <form action="/" method="POST" class="b-menu__wrapp-login-popup-enter">
@@ -64,15 +59,18 @@
         </div>
 
       <!-- Меню пользователя -->
-        <div class="b-menu__wrapp-login-nav">
-          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
-          <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
-          <ul class="b-menu__wrapp-login-nav-list text">
-            <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
-            <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
-            <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
-            <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
-          </ul>
+        <div class="b-menu__wrapp-login-nav col xs-3">
+          <a href="#" class="text b-menu__user-notification-messages"></a>
+          <div class="b-menu__wrapp-login-wrapp">
+            <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+            <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
+            <ul class="b-menu__wrapp-login-nav-list text">
+              <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
+              <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
+              <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
+              <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
+            </ul>
+          </div>
         </div>
 
       </nav>
@@ -99,10 +97,11 @@
 
         <div class="row">
           <section class="l-one-ad col xs-9">
-            <div class="block b-one-ad">
+            <div class="block b-one-ad redact-block">
               <div class="b-main-title">
                 <h1>Название обьявления</h1>
               </div>
+              <a href="add-new-ad.html" class="block-redactor text subtext">Редактировать</a>
               <p class="b-one-ad__sector text">Раздел: <a href="#" title="Sector">Колесо</a></p>
               <h3 class="b-one-ad__price">Цена: <span>20$</span></h3>
               <img src="" alt="" class="b-one-ad__viewport" id="galleryPhoto">
@@ -114,14 +113,13 @@
                 <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
                 <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
               </div>
-              <p class="b-one-ad__about text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minus impedit provident, ipsa vitae consequuntur neque quo eum autem veniam! Blanditiis, nesciunt! Suscipit porro maxime magnam blanditiis, nam maiores delectus.</p>
+              <p class="b-one-ad__about text">колеса в сборе(родные)резина Danlop диски R19 Nissan откатали 2 сезона, на одном диске царапки(на фото видно).Узнавайте, звоните, пишите на почту, договоримся.Комплект норм.еще поездит.</p>
               <p class="b-one-ad__contact m-one-ad__contact_telephone lead">Telephone: <a href="tel:+302105241296">+30 21 0524 1296</span></a></p>
               <p class="b-one-ad__contact m-one-ad__contact_email lead">Email: <a href="mailto:email@email.com?subject=feedback">email@email.com</a></p>
 
               <form action="one-ad-page_submit" method="get" accept-charset="utf-8" class="b-one-ad__form">
                 <h4>Написать сообщение продавцу</h4>
                 <div class="b-form-item m-form-item_textarea m-form-item-inline">
-                  <p class="b-form-item-title text bold"><label>Введите текст сообщения </label></p>
                   <p><textarea rows="4" cols="60" name="hobby" class="text tab-input"></textarea></p>
                 </div>
                 <input type="submit" value="Отправить" class="button submit-button big tab-input"></input>
