--- a/www/one-item-news.html
+++ b/www/one-item-news.html
@@ -40,19 +40,14 @@
   </head>
   <body>
 
-
     <header class="l-menu">
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
-        <ul class="b-menu__wrapp-list col xs-8">
-          <li><a href="news.html" title="" class="text bold">Новости</a></li>
-          <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
-          <li><a href="company.html" title="" class="text bold">Компании</a></li>
-          <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
+        <ul class="b-menu__wrapp-list col xs-7">
         </ul>
 
         <!-- Попап входа -->
-        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1" style="display: none;">Войти</button>
+        <button class="b-menu__wrapp-login button small text bold col xs-offset-2 xs-1" style="display: none;">Войти</button>
         <div class="b-menu__wrapp-login-popup">
           <div class="b-menu__wrapp-login-popup-close"></div>
           <form action="/" method="POST" class="b-menu__wrapp-login-popup-enter">
@@ -66,15 +61,18 @@
         </div>
 
       <!-- Меню пользователя -->
-        <div class="b-menu__wrapp-login-nav">
-          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
-          <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
-          <ul class="b-menu__wrapp-login-nav-list text">
-            <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
-            <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
-            <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
-            <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
-          </ul>
+        <div class="b-menu__wrapp-login-nav col xs-3">
+          <a href="#" class="text b-menu__user-notification-messages"></a>
+          <div class="b-menu__wrapp-login-wrapp">
+            <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+            <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
+            <ul class="b-menu__wrapp-login-nav-list text">
+              <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
+              <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
+              <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
+              <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
+            </ul>
+          </div>
         </div>
 
       </nav>
@@ -185,8 +183,6 @@
       <script type="text/javascript" src="js/script-one-item-news.js"></script>
 <!-- Footer -->
       </div>
-    <!-- Кнопка вверх -->
-    <div class="button-to-top text" style="display: none;">TOP</div>
     </main>
     <footer class="l-footer">
       <div class="wrapper">
